# ISP-Billing

./: .env.example  .gitignore  SCHEDULER_SETUP.md  docker-compose.yml  docker-entrypoint.sh  index.html  pyproject.toml
isp-billing-backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  run_scheduler.py
isp-billing-backend/accounts/: admin.py  models.py  serializers.py  urls.py
isp-billing-backend/accounts/migrations/: 0001_initial.py
isp-billing-backend/analytics/: serializers.py  views.py
isp-billing-backend/billing/: admin.py  apps.py  serializers.py  urls.py  views.py
isp-billing-backend/billing/migrations/: 0001_initial.py  0002_remove_due_date.py
isp-billing-backend/cron/: auto_billing.bat  auto_billing.py  auto_billing.sh  cleanup_tokens.py
isp-billing-backend/customers/: admin.py  models.py  serializers.py  views.py
isp-billing-backend/customers/migrations/: 0002_alter_customer_alternative_phone_and_more.py  0004_connectiontype_alter_customer_connection_type.py  (+1 more)
isp-billing-backend/dashboard/: models.py  views.py
isp-billing-backend/isp_billing/: asgi.py  settings.py  urls.py  wsgi.py
isp-billing-backend/mikrotik/: models.py  serializers.py  services.py  urls.py  views.py
isp-billing-backend/no need/: main.py
isp-billing-backend/schedule/: admin.py  apps.py  background_tasks.py  jobs.py  models.py  serializers.py  urls.py
isp-billing-backend/subscription/: admin.py  models.py  serializers.py  urls.py  views.py
isp-billing-backend/utils/: background_tasks.py  permissions.py
(+126 files in other folders)
